# research_agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: implementer.md  reviewer.md
src/research_agent/: config.py  logger.py
src/research_agent/agents/: graph.py  nodes.py  state.py
src/research_agent/cli/: app.py  repl.py  views.py
src/research_agent/llm/: client.py  prompts.py
src/research_agent/models/: paper.py  session.py
src/research_agent/storage/: session_store.py
src/research_agent/tools/: arxiv_client.py  base.py  dedup.py  http.py  openalex_client.py  semantic_scholar_client.py
tests/: conftest.py  test_arxiv_client.py  test_dedup.py  test_graph.py  test_llm_client.py  test_models.py  test_openalex_client.py  test_semantic_scholar_client.py  test_session_store.py  test_views.py
tests/fixtures/: openalex_works_response.json  semantic_scholar_search_response.json
