[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-agent"
version = "0.1.0"
description = "Research agent MVP: topic refinement, survey paper search with HITL verification"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "ohmyhong1" },
]
dependencies = [
    "langgraph>=0.2",
    "anthropic>=0.40",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "tenacity>=9",
    "arxiv>=2",
    "rich>=13",
    "click>=8",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "respx>=0.21",
    "ruff>=0.6",
]

[project.scripts]
research-agent = "research_agent.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/research_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
